--- a/package.json
+++ b/package.json
@@ -49,9 +49,14 @@
     "lib": "src",
     "test": "test"
   },
-  "dependencies": {},
+  "dependencies": {
+    "clean-stack": "^5.0.1"
+  },
   "devDependencies": {
     "@ehmicky/dev-tasks": "^1.0.98"
+  },
+  "peerDependencies": {
+    "modern-errors": "^4.0.0-beta.3"
   },
   "engines": {
     "node": ">=14.18.0"
