--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-name",
+  "name": "modern-errors-stack",
   "version": "0.0.1",
   "type": "module",
   "exports": {
@@ -15,13 +15,13 @@
   "scripts": {
     "test": "gulp test"
   },
-  "description": "template-description",
+  "description": "`modern-errors` plugin to clean stack traces",
   "keywords": [],
   "license": "MIT",
-  "homepage": "https://www.github.com/ehmicky/template-name",
-  "repository": "ehmicky/template-name",
+  "homepage": "https://www.github.com/ehmicky/modern-errors-stack",
+  "repository": "ehmicky/modern-errors-stack",
   "bugs": {
-    "url": "https://github.com/ehmicky/template-name/issues"
+    "url": "https://github.com/ehmicky/modern-errors-stack/issues"
   },
   "author": "ehmicky <ehmicky@gmail.com> (https://github.com/ehmicky)",
   "directories": {
