Adding npm keywords

--- a/package.json
+++ b/package.json
@@ -16,7 +16,28 @@
     "test": "gulp test"
   },
   "description": "`modern-errors` plugin to clean stack traces",
-  "keywords": [],
+  "keywords": [
+    "browser",
+    "clean",
+    "code-quality",
+    "cwd",
+    "error",
+    "error-handler",
+    "error-handling",
+    "error-monitoring",
+    "error-reporting",
+    "errors",
+    "javascript",
+    "library",
+    "modern-errors",
+    "modern-errors-plugin",
+    "nodejs",
+    "plugins",
+    "stack",
+    "stacktrace",
+    "stacktrace-library",
+    "typescript"
+  ],
   "license": "MIT",
   "homepage": "https://www.github.com/ehmicky/modern-errors-stack",
   "repository": "ehmicky/modern-errors-stack",
