--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,5 +1,5 @@
 {
-  "projectName": "modern-errors-stack",
+  "projectName": "modern-errors-clean",
   "projectOwner": "ehmicky",
   "repoType": "github",
   "repoHost": "https://github.com",
