--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -47,7 +47,7 @@ body:
       description: |
         Enter the following command in a terminal and copy/paste its output:
         ```bash
-        npx envinfo --system --binaries --browsers --npmPackages modern-errors-stack
+        npx envinfo --system --binaries --browsers --npmPackages modern-errors-clean
         ```
     validations:
       required: true
