--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
   },
   "devDependencies": {
     "@ehmicky/dev-tasks": "^3.0.19",
-    "@ehmicky/eslint-config": "^20.0.4"
+    "@ehmicky/eslint-config": "^20.0.4",
+    "@ehmicky/prettier-config": "^1.0.0"
   },
   "peerDependencies": {
     "modern-errors": "^7.0.1"
